# icicle-snark

./: .gitmodules  Cargo.toml  Dockerfile  README.Android.md  README.iOS.md  README.md  build-android-toolchain.sh  build.rs  build_and_run_ios_sim.sh  deploy-run-android.sh  ios-device.sh  ios.sh
.cargo/: config.toml
benchmark/anon_aadhaar/: circuit.circom
benchmark/anon_aadhaar/helpers/: extractor.circom
benchmark/keccak256/: keccak256_256_test.circom  keccak256_256_test_verification_key.json  package-lock.json
benchmark/sha256/: sha256_512_verification_key.json
examples/rust/src/: main.rs
icicle/include/icicle/math/: modular_arithmetic.h
scripts/: setup.sh
src/: cache.rs  conversions.rs  file_wrapper.rs  icicle.rs  icicle_helper.rs  lib.rs  main.rs  multithreaded_groth16_commitments.rs  proof_helper.rs  utils.rs  zkey.rs
src/groth16/: mod.rs  prove.rs  verify.rs  zkey.rs
wrappers/rust/icicle-core/src/: curve.rs
