[package]
name = "icicle-snark"
version = "0.1.0"
edition = "2021"

[lib]
name = "icicle_snark_ios"
crate-type = ["staticlib"]

[dependencies]
icicle-core = { path = "./vendor/icicle/wrappers/rust/icicle-core"}
icicle-runtime = { path = "./vendor/icicle/wrappers/rust/icicle-runtime", features = ["metal_backend"]}
icicle-bn254 = { path = "./vendor/icicle/wrappers/rust/icicle-curves/icicle-bn254", features = ["metal_backend"]}

serde = { version="1.0.216", features = ["derive"] }
serde_json = { version="1.0.125" } 
num-bigint = "0.4.6"
bincode = "1.3.3"
rayon = "1.10.0"
memmap = "0.7.0"
clap = { version="4.5.23", features=["derive"] }

[features]
default=[]
no-randomness=[]
mobile=[]


[target.aarch64-apple-ios]
rustflags = [
    "-C", "link-args=-static",             # Force static linking
    "-C", "link-args=-Wl,-export_dynamic",  # Export all symbols
    "-C", "link-args=-Wl,-force_load",     # Force load all symbols
    "-C", "link-args=-Wl,-no_compact_unwind"  # Fix for macOS linker
]

[target.aarch64-apple-ios-sim]
rustflags = [
    "-C", "link-args=-static",             # Force static linking
    "-C", "link-args=-Wl,-no_compact_unwind"  # Fix for macOS linker
]

[profile.release]
lto = true
codegen-units = 1
